syntax = "proto3";

import "ProfileService/players.proto";

option csharp_namespace = "Matchmaking.Gen";

service GameMatchmaking {
    rpc Matchmaking (MatchmakingRequest) returns (stream MatchmakingResponse);
}

message MatchmakingRequest {
    int32 player_id = 1;
}

message MatchmakingResponse {
    string game_id = 1;
    int32 opponent_id = 2;
    string opponent_nickname = 3;
    int32 mmr = 4;
    int32 rank = 5;
    int32 level = 6;
    Avatar avatar = 7;
    Frame frame = 8;
}